--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,9 @@
 .navBar{
 	background-color:WhiteSmoke;
 }
-.carousel{
-	max-width:700px;
-	margin: auto 0;
+.carousel-inner{
+	width:700px;
+	margin: 0 auto;
 }
 .helpForHidden{
 	text-align:center;
